--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ dzfedgrhjkl;oiytkryjthgvrcefxdzwasdxzfcegrvthbyrki,ilk,unjybhtgvcfedxzwasdxfcgvg
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    il faut aussi le faire de ce coté afin de voir ce que cela va donner 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique en ligne de jack kaspy</title>
     <style>
