--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
+    on insert seulement des choses en esperant creer un conflit 
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boutique en ligne de jack kaspy</title>
     <style>
